Migrate to Java 13