@@ -290,6 +290,30 @@
             <version>${jackson.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
         <!-- Testing -->
 
         <dependency>
@@ -310,6 +334,12 @@
     </dependencies>
 
     <properties>
+        <jdk.version>13</jdk.version>
+
+        <maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <commons-lang.version>3.3.2</commons-lang.version>
@@ -328,6 +358,7 @@
         <mssql.version>6.4.0.jre8</mssql.version>
         <jtds.version>1.3.1</jtds.version>
         <jts.version>1.14.0</jts.version>
+        <jaxb-api.version>2.2.7</jaxb-api.version>
 
         <javax.el.version>2.2.4</javax.el.version>
         <javax.transaction.version>1.1</javax.transaction.version>
@@ -338,7 +369,7 @@
         <flexy-pool.version>2.0.0</flexy-pool.version>
 
         <aspectj.version>1.8.7</aspectj.version>
-        <spring.version>5.1.0.RELEASE</spring.version>
+        <spring.version>5.2.4.RELEASE</spring.version>
 
         <jackson.version>2.9.10</jackson.version>
 
@@ -351,21 +382,44 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <version>${maven-toolchains-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>toolchain</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <compilerArgument>-proc:none</compilerArgument>
+                    <toolchains>
+                        <jdk>
+                            <version>13</version>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <release>${jdk.version}</release>
+                    <!--<compilerArgument>-proc:none</compilerArgument>-->
+                    <compilerArgs>
+                        <compilerArg>--enable-preview</compilerArg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <argLine>-Xms1024m -Xmx1024m</argLine>
+                    <argLine>--enable-preview</argLine>
 
                     <systemPropertyVariables>
                         <bitronix.tm.journal.disk.logPart1Filename>${project.build.directory}/btm1.log</bitronix.tm.journal.disk.logPart1Filename>
